Changes in version 1.6

 - position2d is now a synonym for vector2d.  position2d is therefore marked as deprecated, although it's unlikely to be removed.

 - ISceneNodeAnimator now has a hasFinished() method.

 - ISceneNodeAnimatorCollisionResponse exposes the target node. Setting the node again resets the last position, allowing the node to be teleported.

 - Add a hitPosition out parameter to ISceneCollisionManager::getCollisionResultPosition() - this is a (small) API breaking change.

-------------------------------------
Changes in version 1.5.1 (??.?? 2009)

 - Changed behaviour of PixelBlend16() / PixelBlend16_simd() so that they treat the 1 bit alpha of the source pixel as boolean, i.e. they draw either the source pixel, or the destination pixel, rather than "blending". (Issue revealed by the fix to IVideoDriver::makeColorKeyTexture()).

 - IVideoDriver::makeColorKeyTexture() bug fixed so that only alphas, not whole texel colors, are zeroed.  An optional parameter allows using the old (buggy) behaviour for backwards compatibility.

 - MD2 mesh loader: Now uses much less memory, reduced number of allocations when loading meshes.

-----------------------------------
Changes in version 1.5 (15.12.2008)

 - Construction calls for FPS camera changed to take speed in units/milliseconds, just as the setSpeed method does.

 - Code::Blocks workspaces added.  C::B projects (using gcc) now output to /lib/gcc and /bin/gcc, when built on either Windows or Linux.

 - Added a test suite in the /tests directory.  This can be used to perform regression tests, and should be updated with new tests to verify fixes or validate new features.

 - Changed the preferred way of altering light node's radius: Use the new member methods of ILightSceneNode instead of directly modifying the SLight structure.

 - Changed the initial attenuation back to (0,1/radius,0). To override this value simply change the attenuation in the SLight (lightnode->getLightData().Attenuation.set(x,y,z))
